# for display continuity sake please use 2 spaces instead of tabs

2015_01_15 Giuseppe Aruta 2015_01_15
  * Add on Layer menu "Export layer envelope as geometry" which 
    exports the envelope of any type of layer supported by OpenJUMP (Layer.class,
    ReferencedImageStyle.class, WMSLayer.class, WFSLayer.class,
    RasterImageLayer.class) as geometry. Layer name, layer datasource (if any)
    and CRS (only for WMS and WFS) are saved as layer attributes
 

2015-01-04 Giuseppe Aruta Modified layerable tooltip 
  * Check if layerable has datasource and distinguish between 
    Layer.class, ReferencedImageStyle.class
    WMSLayer.class, WFSLayer.class and RasterImageLayer.class
    
2015-01-12 bertaz
  * Reworked Sextante Raster Image handling:
    - support for loading only the visible part of TIFF files;
    - support for TIFF files overviews and subsampling;
    - support for external .aux.xml statistics file;
    - centralized symbology.
    
2015-01-07 ede
  * fix "OpenJump NB 4256 - Bug on opening Option Dialog and clicking on 
    "OK" button. The panel freezes." reported by Peppe

2015-01-04 ede
  * MultiInputDialog: fix doubleregistering listener, layout issues
  * WMS support
    - added user/pass input fields
    - url field linebreaks into multiple rows on long urls
    - EditWMSQuery plugin can now change auth&url and reiitialize WMS service

2015-01-03 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * WorkbenchFrame. Add the list of layers with no datasource
    when confirm the close of a TaskFrame or the close of
    the application 
  * LayerNameRenderer. Add Layer name and extension of layer 
    at layer tooltip

2015-01-03 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
   * RasterImageLayerPropertiesPlugIn. Updated to advanced options. 
   * Displays File, Raster properties and and cells data statistics
   * of Sextante Raster Layer. It allows and allows to save those
   * information as TXT file. Internationalized
